--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ attrs==19.1.0
 awscli==1.16.161
 backcall==0.1.0
 beautifulsoup4==4.7.1
-bleach>3.1.0
+bleach>=3.1.0
 boto==2.49.0
 boto3==1.9.128
 botocore==1.12.151
@@ -47,7 +47,7 @@ parso==0.3.4
 patsy==0.5.1
 pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==6.2.0
+Pillow>=7.1.0
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
